fix(velocity): linked player textures